# MemoryScanner

./: CMakeLists.txt  README.md  main.c  makefile
include/memscan/core/: CoreFunctions.h
include/memscan/ui/: UserInterface.h
src/core/: CoreFunctions.c  main.c
src/ui/: UserInterface.c
